# cosmic-comp

./: .gitignore  BUILD_REFERENCE.md  CLAUDE.md  Cargo.toml  Fullscreen.todo  GESTURE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  NIGHT_LIGHT_IMPLEMENTATION.md  README.md  RELEASE_CHECKLIST.md  TESTING.md  build.rs  build_release.sh  cargo.just  config.ron  flake.nix  i18n.toml  justfile  log.txt  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml
cosmic-comp-config/: Cargo.toml
cosmic-comp-config/src/: input.rs  lib.rs  output.rs  workspace.rs
cosmic-comp-config/src/output/: comp.rs  mod.rs  randr.rs
data/: cosmic-comp-service  cosmic-comp-session-pre.target  cosmic-comp-session.target  cosmic-comp.desktop  cosmic-comp.service  cosmic-service  cosmic-session-pre.target  cosmic-session.target  cosmic.desktop  justfile  keybindings.ron  replace.sed  tiling-exceptions.ron
debian/: changelog  control  copyright  cosmic-comp.install  postinst  rules
debian/source/: options
debug-data/: debug-cosmic-comp.service  debug-cosmic-service  debug-cosmic.desktop  keybindings.ron  replace.sed
examples/: customized-window-decorations.rs
poc/: index.html
resources/i18n/ar/: cosmic_comp.ftl
resources/i18n/be/: cosmic_comp.ftl
resources/i18n/bg/: cosmic_comp.ftl
resources/i18n/cs/: cosmic_comp.ftl
resources/i18n/de/: cosmic_comp.ftl
resources/i18n/el/: cosmic_comp.ftl
resources/i18n/en/: cosmic_comp.ftl
resources/i18n/es/: cosmic_comp.ftl
resources/i18n/es-419/: cosmic_comp.ftl
resources/i18n/et/: cosmic_comp.ftl
resources/i18n/fa/: cosmic_comp.ftl
resources/i18n/fi/: cosmic_comp.ftl
resources/i18n/fr/: cosmic_comp.ftl
resources/i18n/ga/: cosmic_comp.ftl
resources/i18n/gd/: cosmic_comp.ftl
resources/i18n/hu/: cosmic_comp.ftl
resources/i18n/id/: cosmic_comp.ftl
resources/i18n/is/: cosmic_comp.ftl
resources/i18n/it/: cosmic_comp.ftl
resources/i18n/ja/: cosmic_comp.ftl
resources/i18n/kab/: cosmic_comp.ftl
resources/i18n/kk/: cosmic_comp.ftl
resources/i18n/kmr/: cosmic_comp.ftl
resources/i18n/ko/: cosmic_comp.ftl
resources/i18n/lt/: cosmic_comp.ftl
resources/i18n/nb-NO/: cosmic_comp.ftl
resources/i18n/nl/: cosmic_comp.ftl
resources/i18n/nn/: cosmic_comp.ftl
resources/i18n/pa/: cosmic_comp.ftl
resources/i18n/pl/: cosmic_comp.ftl
resources/i18n/pt/: cosmic_comp.ftl
resources/i18n/pt-BR/: cosmic_comp.ftl
resources/i18n/ro/: cosmic_comp.ftl
resources/i18n/ru/: cosmic_comp.ftl
resources/i18n/sk/: cosmic_comp.ftl
resources/i18n/sr/: cosmic_comp.ftl
resources/i18n/sr-Cyrl/: cosmic_comp.ftl
resources/i18n/sr-Latn/: cosmic_comp.ftl
resources/i18n/sv/: cosmic_comp.ftl
resources/i18n/tr/: cosmic_comp.ftl
resources/i18n/uk/: cosmic_comp.ftl
resources/i18n/vi/: cosmic_comp.ftl
resources/i18n/zh-CN/: cosmic_comp.ftl
resources/i18n/zh-TW/: cosmic_comp.ftl
resources/i18n/zh_CN/: cosmic_com.ftl  cosmic_comp.ftl
src/: config.rs  debug.rs  hooks.rs  lib.rs  libei.rs  main.rs  session.rs  state.rs  systemd.rs  theme.rs  utils.rs  xwayland.rs
src/backend/: cursor.rs  mod.rs  winit.rs  x11.rs
src/backend/kms/: crtc_mapping.rs  device.rs  drm_helpers.rs  gamma.rs  mod.rs  session_fd.rs  socket.rs
src/backend/kms/render/: gles.rs  mod.rs  pixman.rs  udmabuf.rs
src/backend/kms/surface/: mod.rs  tearing.rs  timings.rs
src/backend/render/: clipped_surface.rs  cursor.rs  element.rs  mod.rs  shadow.rs
src/backend/render/animations/: spring.rs
src/backend/render/shaders/: blur.vert  blur_downsample.frag  blur_upsample.frag  clipped_surface.frag  focus_indicator.frag  offscreen.frag  rounded_outline.frag  rounded_rectangle.frag  shadow.frag
src/backend/render/wayland/: blur_effect.rs  clipped_surface.rs  mod.rs
src/config/: gestures.rs  input_config.rs  key_bindings.rs  mod.rs  types.rs
src/cosink/: backend.rs  hostd_channel.rs  input.rs  mod.rs
src/dbus/: a11y_keyboard_monitor.rs  color_picker.rs  ei.rs  eis.rs  idle_inhibit_export.rs  login1_manager.rs  logind.rs  mod.rs  name_owners.rs  power.rs  sleep.rs
src/input/: actions.rs  eis.rs  kinetic.rs  mod.rs
src/input/gestures/: mod.rs
src/logger/: mod.rs  serializer.rs
src/rendering/: debug.rs  mod.rs
src/shell/: focus.rs  grabs.rs  handler.rs  mod.rs  seats.rs  workspace.rs  workspaces.rs  zoom.rs
src/shell/element/: mod.rs  resize_indicator.rs  stack.rs  stack_hover.rs  surface.rs  swap_indicator.rs  window.rs
src/shell/element/stack/: tab.rs  tab_text.rs  tabs.rs
src/shell/focus/: mod.rs  order.rs  target.rs
src/shell/grabs/: delay.rs  mod.rs  moving.rs
src/shell/grabs/menu/: default.rs  item.rs  mod.rs
src/shell/layout/: combined.rs  mod.rs  tiling.rs
src/shell/layout/floating/: grabs.rs  mod.rs
src/utils/: color_under_cursor.rs  env.rs  float.rs  geometry.rs  global.rs  iced.rs  ids.rs  mod.rs  pick_pixel.rs  prelude.rs  quirks.rs  rlimit.rs  screenshot.rs  state.rs  tween.rs
src/utils/iced/: mod.rs  state.rs  tab_text.rs
src/wayland/: drm.rs  mod.rs  workspace.rs
src/wayland/handlers/: a11y.rs  alpha_modifier.rs  atspi.rs  background_effect.rs  buffer.rs  commit_timing.rs  compositor.rs  corner_radius.rs  data_control.rs  data_device.rs  decoration.rs  dmabuf.rs  drm.rs  drm_lease.rs  drm_syncobj.rs  export_dmabuf.rs  ext_foreign_toplevel_info.rs  fifo.rs  fixes.rs  foreign_toplevel_list.rs  fractional_scale.rs  gamma_control.rs  idle_inhibit.rs  idle_notify.rs  image_capture_source.rs  image_source.rs  input_method.rs  keyboard_layout.rs  keyboard_shortcuts_inhibit.rs  keymap.rs  layer_shell.rs  mod.rs  output.rs  output_configuration.rs  output_power.rs  overlap_notify.rs  pointer_constraints.rs  pointer_gestures.rs  pointer_warp.rs  presentation.rs  (+24 more)
src/wayland/protocols/: a11y.rs  atspi.rs  corner_radius.rs  drm.rs  export_dmabuf.rs  ext_foreign_toplevel_list.rs  gamma_control.rs  image_capture_source.rs  image_source.rs  keyboard_layout.rs  keymap.rs  mod.rs  output_configuration.rs  output_power.rs  overlap_notify.rs  screencopy.rs  toplevel_info.rs  toplevel_management.rs  workspace.rs
(+37 files in other folders)
