[package]
authors = ["Victoria Brekenfeld"]
edition = "2021"
license = "GPL-3.0-only"
name = "cosmic-comp"
version = "0.1.0"

[workspace]
members = [
  "cosmic-comp-config",
]

[dependencies]
anyhow = {version = "1.0.51", features = ["backtrace"]}
bitflags = "2.4"
bytemuck = "1.12"
calloop = {version = "0.14.1", features = ["executor"]}
cosmic-comp-config = {path = "cosmic-comp-config"}
cosmic-config = {git = "https://github.com/pop-os/libcosmic/", features = ["calloop", "macro"]}
cosmic-protocols = {git = "https://github.com/pop-os/cosmic-protocols", branch = "main", default-features = false, features = ["server"]}
cosmic-settings-config = { git = "https://github.com/pop-os/cosmic-settings-daemon" }
edid-rs = {version = "0.1"}
egui = {version = "0.23.0", optional = true}
egui_plot = {version = "0.23.0", optional = true}
glow = "0.12.0"
i18n-embed = {version = "0.14", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.8"
iced_tiny_skia = {git = "https://github.com/pop-os/libcosmic/"}
indexmap = "2.0"
keyframe = "1.1.1"
lazy_static = "1.4.0"
libc = "0.2.149"
libcosmic = {git = "https://github.com/pop-os/libcosmic/", default-features = false}
libsystemd = {version = "0.7", optional = true}
log-panics = {version = "2", features = ["with-backtrace"]}
once_cell = "1.18.0"
ordered-float = "4.0"
png = "0.17.5"
regex = "1"
ron = "0.8"
rust-embed = {version = "8.0", features = ["debug-embed"]}
sanitize-filename = "0.5.0"
sendfd = "0.4.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1.0.26"
time = {version = "0.3.30", features = ["macros", "formatting", "local-offset"]}
tiny-skia = "0.11"
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_info"] }
tracing-journald = "0.3.0"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "tracing-log"]}
wayland-backend = "0.3.3"
wayland-scanner = "0.31.1"
xcursor = "0.3.3"
xdg = "^2.1"
xdg-user = "0.2.1"
xkbcommon = "0.7"
zbus = "4.4.0"
profiling = { version = "1.0" }
rustix = { version = "0.38.32", features = ["process"] }
smallvec = "1.13.2"

[dependencies.id_tree]
branch = "feature/copy_clone"
git = "https://github.com/Drakulix/id-tree.git"

[dependencies.smithay]
default-features = false
features = [
  "backend_drm",
  "backend_gbm",
  "backend_egl",
  "backend_libinput",
  "backend_session_libseat",
  "backend_udev",
  "backend_winit",
  "backend_vulkan",
  "backend_x11",
  "desktop",
  "renderer_glow",
  "renderer_multi",
  "renderer_pixman",
  "wayland_frontend",
  "xwayland",
]
git = "https://github.com/smithay/smithay.git"
rev = "e7f0857"
version = "0.3"

[dependencies.smithay-egui]
features = ["svg"]
git = "https://github.com/Smithay/smithay-egui.git"
optional = true
rev = "0d0b4ca0"

[features]
debug = ["egui", "egui_plot", "smithay-egui", "anyhow/backtrace"]
default = ["systemd"]
systemd = ["libsystemd"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[profile.dev.package.tiny-skia]
opt-level = 2

[profile.dev.package.rustybuzz]
opt-level = 2

[profile.dev.package.ttf-parser]
opt-level = 2

[profile.fastdebug]
debug = true
inherits = "release"

[profile.release]
lto = "fat"

[patch."https://github.com/Smithay/smithay.git"]
# smithay = { git = "https://github.com/smithay//smithay", rev = "f364c73" }
smithay = {git = "https://github.com/ids1024/smithay", branch = "reis"}
