[package]
name = "cosmic-comp-config"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic/" }
cosmic-randr-shell = { git = "https://github.com/pop-os/cosmic-randr/", optional = true }
input = "0.9.0"
libdisplay-info = { version = "0.2.0", optional = true }
serde = { version = "1", features = ["derive"] }
ron = { version = "0.9.0-alpha.0", optional = true }
tracing = { version = "0.1.37", features = [
    "max_level_debug",
    "release_max_level_info",
], optional = true }

[features]
default = []
output = ["ron", "tracing"]
randr = ["cosmic-randr-shell", "output"]
